# backend-puzzles

./: .env.example  Makefile  README.md  pyproject.toml  render.yaml  requirements.txt  test-requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0e5a9198f6d9_remove_avatar_from_user.py  3aca54698902_added_relations_to_sudoku_registry.py  7bda235d65a1_add_username_to_user.py  9f950136d0a5_create_base_schema.py  a499fe2a7454_give_default_uuid_to_ids.py  ca96f866a502_added_email_to_user_table.py  cfa9f38a6647_create_base_schema.py
app/: grid.py  main.py
app/core/: database.py  settings.py
app/dependencies/: database.py  sudoku_registry_service.py  sudoku_service.py  user_service.py
app/entities/: Sudoku.py  SudokuRegistry.py  User.py  __init__.py
app/libs/: sudoku_grid.py
app/middlewares/: FirebaseAuthMiddleware.py  __init__.py
app/repositories/: SudokuEntryRepository.py  SudokuRegistryRepository.py  SudokuRepository.py  UserRepository.py  __init__.py
app/routers/: __init__.py  sudoku_registry_router.py  sudoku_router.py  user_router.py
app/schemes/: Sudoku.py  SudokuLeaderboard.py  User.py  UserCreate.py  puzzle_registry.py  sudoku.py  sudoku_puzzle.py  sudoku_registry.py  user.py  users.py
app/services/: SudokuRegistryService.py  SudokuService.py  UserService.py  __init__.py
tests/: README.md  __init__.py  test_main.py  test_sudoku_grid.py  test_sudoku_registry_repository.py  test_sudoku_registry_service.py  test_sudoku_repository.py  test_sudoku_service.py  test_user_repository.py  test_user_service.py
(+2 files in other folders)
