[tool.poetry]
name = "backend-puzzles"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.6"}
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
pydantic-settings = "^2.7.1"
firebase-admin = "^6.6.0"
psycopg2 = "^2.9.10"
numpy = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
